# kairos

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
include/kairos/: clap_kairos_hot_swap.h  clap_kairos_param_bus.h  control_thread.hpp  graph.hpp  ipc.hpp  plugin_graph_manager.hpp  plugin_instance.hpp  rt_control_thread.hpp
scripts/: pre-commit
src/: audio_engine.cpp  builtin_plugins.cpp  builtin_plugins.hpp  control_thread.cpp  main.cpp  plugin_discovery.cpp  plugin_graph_manager.cpp  plugin_host.cpp  plugin_instance.cpp  process_thread.cpp  rt_control_thread.cpp  wasm_bridge_plugin.cpp  wasm_bridge_plugin.hpp
tests/: CMakeLists.txt  test_builtin_plugins.cpp  test_ipc.cpp  test_ipc_channel.cpp  test_param_bus_host.cpp  test_patch_bus_host.cpp  test_plugin_graph.cpp  test_plugin_instance.cpp  test_session.cpp  test_tap_bus_host.cpp  test_time_identity.cpp  test_wasm_bridge.cpp
tests/stub_param_bus_plugin/: CMakeLists.txt  stub_param_bus_plugin.cpp
tests/stub_plugin/: stub_plugin.cpp
